libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__variable-missing-assign.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: errs.to_string()

---
blueprint language errors:
	- parse error: expected '=', got string at 1:35
	  1 | variable region: string { default "us-east-1" }
	    |                                   ^
	- parse error: missing required 'version' directive
