libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__variable-multiline-description.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: "format!(\"{bp:#?}\")"

---
Blueprint {
    version: Some(
        Scalar {
            value: String(
                "2025-11-02",
            ),
            span: Some(
                Span {
                    start: Position {
                        line: 1,
                        column: 9,
                    },
                    end: Some(
                        Position {
                            line: 1,
                            column: 21,
                        },
                    ),
                },
            ),
        },
    ),
    transform: [],
    variables: NamedMap {
        values: {
            "region": Variable {
                var_type: Spanned {
                    value: String,
                    span: Some(
                        Span {
                            start: Position {
                                line: 3,
                                column: 18,
                            },
                            end: Some(
                                Position {
                                    line: 3,
                                    column: 24,
                                },
                            ),
                        },
                    ),
                },
                description: Some(
                    Scalar {
                        value: String(
                            "The region to deploy resources in.\nMust be a region where the service is available.",
                        ),
                        span: Some(
                            Span {
                                start: Position {
                                    line: 5,
                                    column: 19,
                                },
                                end: Some(
                                    Position {
                                        line: 8,
                                        column: 12,
                                    },
                                ),
                            },
                        ),
                    },
                ),
                secret: None,
                default: Some(
                    Scalar {
                        value: String(
                            "us-east-1",
                        ),
                        span: Some(
                            Span {
                                start: Position {
                                    line: 4,
                                    column: 15,
                                },
                                end: Some(
                                    Position {
                                        line: 4,
                                        column: 26,
                                    },
                                ),
                            },
                        ),
                    },
                ),
                allowed_values: [],
                span: Some(
                    Span {
                        start: Position {
                            line: 3,
                            column: 10,
                        },
                        end: Some(
                            Position {
                                line: 3,
                                column: 16,
                            },
                        ),
                    },
                ),
            },
        },
        source_meta: {
            "region": Span {
                start: Position {
                    line: 3,
                    column: 10,
                },
                end: Some(
                    Position {
                        line: 3,
                        column: 16,
                    },
                ),
            },
        },
    },
    values: NamedMap {
        values: {},
        source_meta: {},
    },
    include: NamedMap {
        values: {},
        source_meta: {},
    },
    resources: NamedMap {
        values: {},
        source_meta: {},
    },
    data_sources: NamedMap {
        values: {},
        source_meta: {},
    },
    exports: NamedMap {
        values: {},
        source_meta: {},
    },
    metadata: None,
    span: None,
}
