libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__variable-non-scalar-default.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: errs.to_string()

---
blueprint language errors:
	- parse error: expected a scalar literal, got '[' at 1:37
	  1 | variable region: string { default = ["a"] }
	    |                                     ^
	- parse error: missing required 'version' directive
