libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__variable-secret-not-bool.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: errs.to_string()

---
blueprint language errors:
	- parse error: expected boolean, got string at 1:36
	  1 | variable region: string { secret = "yes" }
	    |                                    ^
	- parse error: missing required 'version' directive
